[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incident-agent-ai"
version = "0.1.0"
description = "AI-powered on-call incident response agent -- reads logs, correlates alerts, suggests RCA."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["incident-response", "sre", "on-call", "claude", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
incident-agent = "incident_agent.cli:main"

[project.urls]
homepage = "https://github.com/example/incident-agent-ai"
repository = "https://github.com/example/incident-agent-ai"

[tool.hatch.build.targets.wheel]
packages = ["incident_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
